<resources>
    <string name="app_name">Bookdom</string>
    <string name="add_to_cart">Añadir al carrito</string>
    <string name="welcome">Bienvenido</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register_question">¿No tienes cuenta? Registrate</string>
    <string name="forgot_password">¿Has olvidado tu contraseña?</string>
    <string name="selling">A la venta</string>
    <string name="keep_logged">Mantener sesión iniciada</string>
    <string name="select_language">Seleccionar idioma</string>
    <string name="theme">Tema oscuro</string>
    <string name="register">Registrarse</string>
    <string name="title">Título</string>
    <string name="author">Autor</string>
    <string name="price">Precio</string>
    <string name="description">Descripcion</string>
    <string name="upload">Subir</string>
    <string name="articles">Artículos</string>
    <string name="buy">Comprar</string>
    <string name="transactions">Transacciones</string>
    <string name="purchases">Compras</string>
    <string name="sells">Ventas</string>
    <string name="account">Cuenta</string>
    <string name="settings">Configuración</string>
    <string name="help">¿Necesitas ayuda?</string>
    <string name="about_me">Sobre mi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>