<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BACKGROUND"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBarAddLibro"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:elevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:id="@+id/imgTableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:layout_margin="10sp"
                    android:background="@color/gray_color"
                    app:cardBackgroundColor="@color/gray_color"
                    app:cardCornerRadius="10sp">

                    <ImageView
                        android:id="@+id/imgLibro1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/camara" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:layout_margin="10sp"
                    android:background="@color/gray_color"
                    app:cardBackgroundColor="@color/gray_color"
                    app:cardCornerRadius="10sp">

                    <ImageView
                        android:id="@+id/imgLibro2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/camara" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:layout_margin="10sp"
                    android:background="@color/gray_color"
                    app:cardBackgroundColor="@color/gray_color"
                    app:cardCornerRadius="10sp">

                    <ImageView
                        android:id="@+id/imgLibro3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/camara" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:layout_margin="10sp"
                    android:background="@color/gray_color"
                    app:cardBackgroundColor="@color/gray_color"
                    app:cardCornerRadius="10sp">

                    <ImageView
                        android:id="@+id/imgLibro4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/camara" />
                </androidx.cardview.widget.CardView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:layout_margin="10sp"
                    app:cardBackgroundColor="@color/gray_color"
                    app:cardCornerRadius="10sp">

                    <ImageView
                        android:id="@+id/imgLibro5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/camara" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:layout_margin="10sp"
                    app:cardBackgroundColor="@color/gray_color"
                    app:cardCornerRadius="10sp">

                    <ImageView
                        android:id="@+id/imgLibro6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/camara" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:layout_margin="10sp"
                    app:cardBackgroundColor="@color/gray_color"
                    app:cardCornerRadius="10sp">

                    <ImageView
                        android:id="@+id/imgLibro7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/camara" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="60sp"
                    android:layout_height="60sp"
                    android:layout_margin="10sp"
                    app:cardBackgroundColor="@color/gray_color"
                    app:cardCornerRadius="10sp">

                    <ImageView
                        android:id="@+id/imgLibro8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/camara" />
                </androidx.cardview.widget.CardView>
            </TableRow>

        </TableLayout>

        <EditText
            android:id="@+id/editTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="30sp"
            android:layout_marginRight="40sp"
            android:ems="10"
            android:hint="@string/title"
            android:inputType="text" />

        <EditText
            android:id="@+id/editAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="40sp"
            android:ems="10"
            android:hint="Autor"
            android:inputType="text" />

        <EditText
            android:id="@+id/editPrecio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="40sp"
            android:ems="10"
            android:hint="@string/price"
            android:inputType="number|numberDecimal" />

        <Spinner
            android:id="@+id/spinnerGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="40sp" />

        <Spinner
            android:id="@+id/spinnerEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="40sp" />

        <EditText
            android:id="@+id/editDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="40sp"
            android:ems="10"
            android:hint="@string/description" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#3EFFFFFF"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnComprar"
            style="@style/BOTON"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/upload" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>